# scaict-website-api

./: .Dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-build.sh  docker-run.sh
src/: api.rs  main.rs
src/notion/: cache.rs  client.rs  mod.rs  types.rs
