[package]
name = "scaict_website_api"
version = "0.1.0"
edition = "2021"

[dependencies.actix-web]
version = "4.3.1"

[dependencies.anyhow]
version = "1.0.72"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.hyper]
version = "0.14.27"

[dependencies.hyper-rustls]
version = "0.24.1"

[dependencies.time]
version = "0.3.23"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.17"

[dependencies.uuid]
version = "1.4.1"

[dependencies.serde_json]
version = "1.0.104"

[dependencies.flate2]
version = "1.0.26"
