[package]
name = "scaict-website-api"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "s"


[dependencies.actix-web]
version = "4.3.1"
features = ["rustls"]

[dependencies.anyhow]
version = "1.0.72"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.hyper]
version = "0.14.27"

[dependencies.hyper-rustls]
version = "0.24.1"

[dependencies.rustls]
version = "0.20.2"

[dependencies.rustls-pemfile]
version = "1.0.3"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.17"

[dependencies.serde]
version = "1.0.177"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.104"

[dependencies.flate2]
version = "1.0.26"

[dependencies.futures-util]
version = "0.3.28"
