[package]
name = "scaict-website-api"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "s"


[dependencies.axum]
version = "0.6.19"
features = ["tracing"]

[dependencies.axum-server]
version = "0.5.1"
features = ["tls-rustls"]

[dependencies.anyhow]
version = "1.0.72"

[dependencies.dotenv]
version = "0.15.0"

[dependencies.hyper]
version = "0.14.27"

[dependencies.hyper-rustls]
version = "0.24.1"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tower-http]
version = "0.4.3"
features = ["trace", "cors"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.serde]
version = "1.0.177"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.104"

[dependencies.flate2]
version = "1.0.26"
default-features = false
features = ["cloudflare_zlib"]
